# libnekit-c

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  valgrind.sh
include/: assert.h  config.h  error.h  log.h  mem.h  memory_pool.h  ne_assert.h  ne_mem.h  proxy_socket.h  proxy_socket_socks5.h  queue.h  session.h  tcp_socket.h  tree.h  types.h
scripts/: build_deps.sh
src/socket/: proxy_socket.c  proxy_socket_socks5.c  tcp_socket.c
src/utils/: error.c  log.c  memory_pool.c  session.c  tcp_socket.c
test/: CMakeLists.txt  Dockerfile
test/include/: helper.h
test/socket/: test_proxy_socket_socks5.c  test_tcp_socket.c
test/utils/: test_memory_pool.c  test_tcp_socket.c
utils/: linked_list.c  linked_list.h  memory_pool.h  types.h
